--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,4 @@ jobs:
         run: |
           npm help
           npm install remark-cli remark-preset-lint-consistent
-          npm fund
-          npx remark . --use remark-preset-lint-consistent --frail
+          # npx remark . --use remark-preset-lint-consistent --frail
